syntax = "proto3";

option csharp_namespace = "loonloon.Grpc.SSPT.Service.Protos";
import "google/protobuf/timestamp.proto";

service SimpleStockTicker {
	rpc Subscribe (SubscribeRequest) returns (stream StockTickerUpdate);
}

message SubscribeRequest {
	repeated string symbols = 1;
}

message StockTickerUpdate {
	string symbol = 1;
	double price = 2;
	google.protobuf.Timestamp time = 3;
}